# inngame

./: .vercelignore  README_PROJECT.md  pyproject.toml  requirements.txt  start_web_app.sh  vercel.json  web_ninjutsu_app.py
api/: main.py  model_stub.py
docs/: project_summary.md  vercel_deployment.md  web_app_guide.md
